<resources>
    <string name="app_name">IntTips</string>
    <string name="mealTotal">Enter Meal Total</string>
    <string name="action_settings">Settings</string>
    <string name="d_sign">$</string>
    <string name="zero">$0.00</string>
    <string name="percent15">15%</string>
    <string name="percent"><b><u>PERCENT</u></b></string>
    <string name="tip"><b><u>TIP</u></b></string>
    <string name="total"><b><u>TOTAL</u></b></string>
</resources>
