<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IntTip">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TableRow style="@style/row">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/mealTotal"
                android:textColor="#000"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            style="@style/row"
            android:paddingBottom="10dp"
            android:paddingTop="25dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="$"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/totalBill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:paddingRight="40dp"
                android:text="10.00"
                android:textSize="30sp"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"/>
                <!--android:onClick="setBillTotal"-->


        </TableRow>

        <TableRow style="@style/row">

            <TextView
                style="@style/percent"
                android:text="@string/percent" />

            <TextView
                style="@style/tip"
                android:text="@string/tip" />

            <TextView
                style="@style/total"
                android:text="@string/total" />
        </TableRow>

        <TableRow
            style="@style/row"
            android:paddingTop="5dp">

            <TextView
                style="@style/percent"
                android:text="@string/percent15"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tip15"
                style="@style/tip"
                android:text="@string/zero"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total15"
                style="@style/total"
                android:text="@string/zero"
                android:textStyle="bold" />
        </TableRow>

        <TableRow style="@style/row">

            <TextView
                android:id="@+id/plus15"
                style="@style/percent"
                android:text="+15%" />

            <TextView
                android:id="@+id/tip15Plus"
                style="@style/tip"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/total15Plus"
                style="@style/total"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            style="@style/row"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/minus18"
                style="@style/percent"
                android:text="-18%" />

            <TextView
                android:id="@+id/tip18Minus"
                style="@style/tip"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/total18Minus"
                style="@style/total"
                android:text="@string/zero" />
        </TableRow>

        <TableRow style="@style/row">

            <TextView
                style="@style/percent"
                android:text="18%"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tip18"
                style="@style/tip"
                android:text="@string/zero"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/total18"
                style="@style/total"
                android:text="@string/zero"
                android:textStyle="bold" />
        </TableRow>

        <TableRow style="@style/row">

            <TextView
                android:id="@+id/plus18"
                style="@style/percent"
                android:text="+18%" />

            <TextView
                android:id="@+id/tip18Plus"
                style="@style/tip"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/total18Plus"
                style="@style/total"
                android:text="@string/zero" />
        </TableRow>

        <TableRow
            style="@style/row"
            android:paddingTop="30dp">

            <TextView
                android:text="Custom Tip"
                android:textSize="25sp" />

        </TableRow>

        <TableRow style="@style/row">

            <TextView
                android:id="@+id/cPercent"
                style="@style/percent"
                android:text="20%"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/cTip"
                style="@style/tip"
                android:text="$0.00"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/cAmount"
                style="@style/total"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:text="10.00"
                android:textSize="20sp"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"/>
                <!--android:onClick="setCTotal"-->


        </TableRow>

        <TableRow
            style="@style/row"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Split"
                android:textSize="25sp" />

        </TableRow>

        <TableRow style="@style/row">

            <EditText
                android:id="@+id/splitPeople"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:text="1"
                android:textSize="20sp"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"/>
                <!--android:onClick="setSplitPpl"-->


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="people"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/splitAmount"
                style="@style/tip"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="20sp" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#0099FF"
        android:gravity="center"
        android:onClick="calculate"
        android:text="CALCULATE"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>
